<?xml version="1.0"?>
<package>
  <name>roscpp_utilities</name>
  <version>0.1.0</version>
  <description>Utilities which extend roscpp and make it easier to use</description>

  <maintainer email="kalakris@usc.edu">Mrinal Kalakrishnan</maintainer>
  <author email="kalakris@usc.edu">Mrinal Kalakrishnan</author>
  <author email="pastorsa@usc.edu">Peter Pastor</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
